Minor fix to jackFitter_libs in jackFitter-config.in

--- a/jackFitter-config.in
+++ b/jackFitter-config.in
@@ -27,7 +27,8 @@ extra_libs=""
 jackFitter_cxx="@CXX@"
 jackFitter_cxxflags="@CXXFLAGS@ -I@includedir@"
 jackFitter_ldflags="@LDFLAGS@ -L@libdir@"
-jackFitter_libs="-ljackFitter -lblas -llapack -lgfortran -litpp "
+#jackFitter_libs="-ljackFitter -lblas -llapack -lgfortran -litpp "
+jackFitter_libs="-ljackFitter "
 
 jackFitter_ranlib="@RANLIB@"
 jackFitter_ar="@AR@"
