--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -37,7 +37,8 @@ bin_PROGRAMS = fit_Z_const_and_exp$(EXEEXT) fit_corr_cosh$(EXEEXT) \
 	fit_corr_exp_and_const$(EXEEXT) \
 	fit_multiple_princorrs$(EXEEXT) fit_prin_corr$(EXEEXT) \
 	generate_ensem$(EXEEXT) timeslice_covariance$(EXEEXT) \
-	fit_corr_finT$(EXEEXT) fit_const$(EXEEXT)
+	fit_corr_finT$(EXEEXT) fit_const$(EXEEXT) \
+	fit_corr_exp_cmplx$(EXEEXT)
 subdir = src
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -76,6 +77,10 @@ am_fit_corr_exp_and_const_OBJECTS = fit_corr_exp_and_const.$(OBJEXT)
 fit_corr_exp_and_const_OBJECTS = $(am_fit_corr_exp_and_const_OBJECTS)
 fit_corr_exp_and_const_LDADD = $(LDADD)
 fit_corr_exp_and_const_DEPENDENCIES =
+am_fit_corr_exp_cmplx_OBJECTS = fit_corr_exp_cmplx.$(OBJEXT)
+fit_corr_exp_cmplx_OBJECTS = $(am_fit_corr_exp_cmplx_OBJECTS)
+fit_corr_exp_cmplx_LDADD = $(LDADD)
+fit_corr_exp_cmplx_DEPENDENCIES =
 am_fit_corr_finT_OBJECTS = fit_corr_finT.$(OBJEXT)
 fit_corr_finT_OBJECTS = $(am_fit_corr_finT_OBJECTS)
 fit_corr_finT_LDADD = $(LDADD)
@@ -108,15 +113,15 @@ CXXLINK = $(CXXLD) $(AM_CXXFLAGS) $(CXXFLAGS) $(AM_LDFLAGS) $(LDFLAGS) \
 SOURCES = $(fit_Z_const_and_exp_SOURCES) $(fit_const_SOURCES) \
 	$(fit_corr_cosh_SOURCES) $(fit_corr_cosh_and_const_SOURCES) \
 	$(fit_corr_exp_SOURCES) $(fit_corr_exp_and_const_SOURCES) \
-	$(fit_corr_finT_SOURCES) $(fit_multiple_princorrs_SOURCES) \
-	$(fit_prin_corr_SOURCES) $(generate_ensem_SOURCES) \
-	$(timeslice_covariance_SOURCES)
+	$(fit_corr_exp_cmplx_SOURCES) $(fit_corr_finT_SOURCES) \
+	$(fit_multiple_princorrs_SOURCES) $(fit_prin_corr_SOURCES) \
+	$(generate_ensem_SOURCES) $(timeslice_covariance_SOURCES)
 DIST_SOURCES = $(fit_Z_const_and_exp_SOURCES) $(fit_const_SOURCES) \
 	$(fit_corr_cosh_SOURCES) $(fit_corr_cosh_and_const_SOURCES) \
 	$(fit_corr_exp_SOURCES) $(fit_corr_exp_and_const_SOURCES) \
-	$(fit_corr_finT_SOURCES) $(fit_multiple_princorrs_SOURCES) \
-	$(fit_prin_corr_SOURCES) $(generate_ensem_SOURCES) \
-	$(timeslice_covariance_SOURCES)
+	$(fit_corr_exp_cmplx_SOURCES) $(fit_corr_finT_SOURCES) \
+	$(fit_multiple_princorrs_SOURCES) $(fit_prin_corr_SOURCES) \
+	$(generate_ensem_SOURCES) $(timeslice_covariance_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -236,6 +241,7 @@ generate_ensem_SOURCES = generate_ensem.cc
 timeslice_covariance_SOURCES = timeslice_covariance.cc
 fit_corr_finT_SOURCES = fit_corr_finT.cc
 fit_const_SOURCES = fit_const.cc
+fit_corr_exp_cmplx_SOURCES = fit_corr_exp_cmplx.cc
 
 #
 # The following rule will always try to rebuild libadat.a when you 
@@ -332,6 +338,9 @@ fit_corr_exp$(EXEEXT): $(fit_corr_exp_OBJECTS) $(fit_corr_exp_DEPENDENCIES)
 fit_corr_exp_and_const$(EXEEXT): $(fit_corr_exp_and_const_OBJECTS) $(fit_corr_exp_and_const_DEPENDENCIES) 
 	@rm -f fit_corr_exp_and_const$(EXEEXT)
 	$(CXXLINK) $(fit_corr_exp_and_const_OBJECTS) $(fit_corr_exp_and_const_LDADD) $(LIBS)
+fit_corr_exp_cmplx$(EXEEXT): $(fit_corr_exp_cmplx_OBJECTS) $(fit_corr_exp_cmplx_DEPENDENCIES) 
+	@rm -f fit_corr_exp_cmplx$(EXEEXT)
+	$(CXXLINK) $(fit_corr_exp_cmplx_OBJECTS) $(fit_corr_exp_cmplx_LDADD) $(LIBS)
 fit_corr_finT$(EXEEXT): $(fit_corr_finT_OBJECTS) $(fit_corr_finT_DEPENDENCIES) 
 	@rm -f fit_corr_finT$(EXEEXT)
 	$(CXXLINK) $(fit_corr_finT_OBJECTS) $(fit_corr_finT_LDADD) $(LIBS)
@@ -360,6 +369,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fit_corr_cosh_and_const.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fit_corr_exp.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fit_corr_exp_and_const.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fit_corr_exp_cmplx.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fit_corr_finT.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fit_multiple_princorrs.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fit_prin_corr.Po@am__quote@
