added a three point command line fitter, made the initial guesses a bit more robust

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -21,7 +21,7 @@ LDADD = -ljackFitter @ADAT_LIBS@ @ITPP_LIBS@ @LIBS@
 #noinst_PROGRAMS = spectrum
 
 bin_PROGRAMS = fit_Z_const_and_exp fit_corr_cosh fit_corr_cosh_and_const fit_corr_exp fit_corr_exp_and_const fit_multiple_princorrs \
-							 fit_prin_corr generate_ensem timeslice_covariance fit_corr_finT fit_const fit_corr_exp_cmplx
+							 fit_prin_corr generate_ensem timeslice_covariance fit_corr_finT fit_const fit_corr_exp_cmplx fit_jack_threepoint
 
 fit_Z_const_and_exp_SOURCES = fit_Z_const_and_exp.cc
 
@@ -46,6 +46,8 @@ fit_corr_finT_SOURCES = fit_corr_finT.cc
 fit_const_SOURCES = fit_const.cc
 
 fit_corr_exp_cmplx_SOURCES = fit_corr_exp_cmplx.cc
+
+fit_jack_threepoint_SOURCES = fit_jack_threepoint.cc
 
 #
 # The following rule will always try to rebuild libadat.a when you 
