syncing some new tech

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -38,7 +38,8 @@ bin_PROGRAMS = fit_Z_const_and_exp$(EXEEXT) fit_corr_cosh$(EXEEXT) \
 	fit_multiple_princorrs$(EXEEXT) fit_prin_corr$(EXEEXT) \
 	generate_ensem$(EXEEXT) timeslice_covariance$(EXEEXT) \
 	fit_corr_finT$(EXEEXT) fit_const$(EXEEXT) \
-	fit_corr_exp_cmplx$(EXEEXT) fit_jack_threepoint$(EXEEXT)
+	fit_corr_exp_cmplx$(EXEEXT) fit_jack_threepoint$(EXEEXT) \
+	fit_jack_threepoint_xml$(EXEEXT)
 subdir = src
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -89,6 +90,12 @@ am_fit_jack_threepoint_OBJECTS = fit_jack_threepoint.$(OBJEXT)
 fit_jack_threepoint_OBJECTS = $(am_fit_jack_threepoint_OBJECTS)
 fit_jack_threepoint_LDADD = $(LDADD)
 fit_jack_threepoint_DEPENDENCIES =
+am_fit_jack_threepoint_xml_OBJECTS =  \
+	fit_jack_threepoint_xml.$(OBJEXT)
+fit_jack_threepoint_xml_OBJECTS =  \
+	$(am_fit_jack_threepoint_xml_OBJECTS)
+fit_jack_threepoint_xml_LDADD = $(LDADD)
+fit_jack_threepoint_xml_DEPENDENCIES =
 am_fit_multiple_princorrs_OBJECTS = fit_multiple_princorrs.$(OBJEXT)
 fit_multiple_princorrs_OBJECTS = $(am_fit_multiple_princorrs_OBJECTS)
 fit_multiple_princorrs_LDADD = $(LDADD)
@@ -119,6 +126,7 @@ SOURCES = $(fit_Z_const_and_exp_SOURCES) $(fit_const_SOURCES) \
 	$(fit_corr_exp_SOURCES) $(fit_corr_exp_and_const_SOURCES) \
 	$(fit_corr_exp_cmplx_SOURCES) $(fit_corr_finT_SOURCES) \
 	$(fit_jack_threepoint_SOURCES) \
+	$(fit_jack_threepoint_xml_SOURCES) \
 	$(fit_multiple_princorrs_SOURCES) $(fit_prin_corr_SOURCES) \
 	$(generate_ensem_SOURCES) $(timeslice_covariance_SOURCES)
 DIST_SOURCES = $(fit_Z_const_and_exp_SOURCES) $(fit_const_SOURCES) \
@@ -126,6 +134,7 @@ DIST_SOURCES = $(fit_Z_const_and_exp_SOURCES) $(fit_const_SOURCES) \
 	$(fit_corr_exp_SOURCES) $(fit_corr_exp_and_const_SOURCES) \
 	$(fit_corr_exp_cmplx_SOURCES) $(fit_corr_finT_SOURCES) \
 	$(fit_jack_threepoint_SOURCES) \
+	$(fit_jack_threepoint_xml_SOURCES) \
 	$(fit_multiple_princorrs_SOURCES) $(fit_prin_corr_SOURCES) \
 	$(generate_ensem_SOURCES) $(timeslice_covariance_SOURCES)
 ETAGS = etags
@@ -249,6 +258,7 @@ fit_corr_finT_SOURCES = fit_corr_finT.cc
 fit_const_SOURCES = fit_const.cc
 fit_corr_exp_cmplx_SOURCES = fit_corr_exp_cmplx.cc
 fit_jack_threepoint_SOURCES = fit_jack_threepoint.cc
+fit_jack_threepoint_xml_SOURCES = fit_jack_threepoint_xml.cc
 
 #
 # The following rule will always try to rebuild libadat.a when you 
@@ -354,6 +364,9 @@ fit_corr_finT$(EXEEXT): $(fit_corr_finT_OBJECTS) $(fit_corr_finT_DEPENDENCIES)
 fit_jack_threepoint$(EXEEXT): $(fit_jack_threepoint_OBJECTS) $(fit_jack_threepoint_DEPENDENCIES) 
 	@rm -f fit_jack_threepoint$(EXEEXT)
 	$(CXXLINK) $(fit_jack_threepoint_OBJECTS) $(fit_jack_threepoint_LDADD) $(LIBS)
+fit_jack_threepoint_xml$(EXEEXT): $(fit_jack_threepoint_xml_OBJECTS) $(fit_jack_threepoint_xml_DEPENDENCIES) 
+	@rm -f fit_jack_threepoint_xml$(EXEEXT)
+	$(CXXLINK) $(fit_jack_threepoint_xml_OBJECTS) $(fit_jack_threepoint_xml_LDADD) $(LIBS)
 fit_multiple_princorrs$(EXEEXT): $(fit_multiple_princorrs_OBJECTS) $(fit_multiple_princorrs_DEPENDENCIES) 
 	@rm -f fit_multiple_princorrs$(EXEEXT)
 	$(CXXLINK) $(fit_multiple_princorrs_OBJECTS) $(fit_multiple_princorrs_LDADD) $(LIBS)
@@ -382,6 +395,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fit_corr_exp_cmplx.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fit_corr_finT.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fit_jack_threepoint.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fit_jack_threepoint_xml.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fit_multiple_princorrs.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fit_prin_corr.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/generate_ensem.Po@am__quote@
